fix: Developer Hub and Account Name options are not aligned (#3382)

--- a/src/amo/components/Header/styles.scss
+++ b/src/amo/components/Header/styles.scss
@@ -113,6 +113,7 @@
 
 .Header-button {
   margin-bottom: 12px;
+  vertical-align: top;
 }
 
 .Header-developer-hub-link {
